--- a/index.html
+++ b/index.html
@@ -1,87 +1,100 @@
 <!DOCTYPE html>
-<head>
-  <title>Fashion</title>
-</head>
+<html lang="pt-br">
+  <head>
+    <title>Fashion</title>
+  </head>
 
-<link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
 
-<body>
-  <!-- Header -->
-  <header>
-    <ul>
-      <div id="logo">
-        <img src="imagens/logo.png" alt="Logo" />
+  <body>
+    <div id="principal">
+      <!-- Header -->
+      <header>
+        <ul>
+          <div id="logo">
+            <img src="imagens/logo.png" alt="Logo" />
+          </div>
+
+          <li><a class="title" href="#portfolio"></a>Portfolio</li>
+          <li><a class="title" href="#about"></a>About us</li>
+          <li class="li3"><a class="title" href="#contact"></a>Contact</li>
+        </ul>
+      </header>
+
+      <!-- Imagem Topo -->
+      <div id="imagem1"></div>
+
+      <!-- Portfolio-->
+      <article id="portfolio">
+        <h1>New Fashion Everything Never Enough</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt optio
+          tenetur quisquam ab, reiciendis quo vero repellat eius sed maxime
+          ipsum soluta dolor deserunt non recusandae vitae, voluptatem iste
+          porro? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+          blanditiis alias harum porro recusandae sequi, minus illo expedita
+          quas, magnam fugit, doloremque quibusdam aliquam. Suscipit placeat
+          magni aperiam provident dolor. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Debitis perspiciatis modi quam obcaecati, aperiam
+          cupiditate nostrum illum reprehenderit distinctio laborum. Architecto
+          vitae numquam optio enim cum voluptatem laborum molestias debitis?
+        </p>
+      </article>
+
+      <!-- Gallery -->
+      <section id="gallery">
+        <article class="gallery-card">
+          <img src="imagens/modelo1.jpg" alt="Homem 1" />
+          <h2>Vest Romasa</h2>
+          <p>Strong &amp; charismatic</p>
+        </article>
+        <article class="gallery-card">
+          <img src="imagens/modelo2.jpg" alt="Mulher 2" />
+          <h2>Jacket Fima</h2>
+          <p>Stong Sersonality</p>
+        </article>
+        <article class="gallery-card">
+          <img src="imagens/modelo3.jpg" alt="Mulher 3" />
+          <h2>Jacket Black Kira</h2>
+          <p>Power Fascinating</p>
+        </article>
+      </section>
+
+      <!-- About -->
+      <article id="about">
+        <h1>Everything Never Enough Just Fashion</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, eos
+          nemo magnam libero officia alias molestiae minus eligendi repudiandae,
+          unde ullam! Modi obcaecati ipsum sunt amet aliquid ipsa assumenda
+          aperiam?Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Earum atque eligendi quisquam necessitatibus accusantium saepe
+          molestias rerum vero praesentium cum neque quod, consequatur animi
+          reiciendis sed in perferendis. Distinctio, laudantium.
+        </p>
+      </article>
+
+      <!-- Contact -->
+      <div id="contact">
+        <h2 class="principal">Call me now for design</h2>
+        <h2 class="secundario">012-1234-4567</h2>
       </div>
 
-      <li><a class="title" href="#portfolio"></a>Portfolio</li>
-      <li><a class="title" href="#about"></a>About us</li>
-      <li class="li3"><a class="title" href="#contact"></a>Contact</li>
-    </ul>
-  </header>
+      <div class="maps">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1674.2631501215403!2d131.0802859400874!3d32.93711154654844!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x641928530cc18777!2sAso%20Station!5e0!3m2!1spt-BR!2sbr!4v1644434681824!5m2!1spt-BR!2sbr"
+          width="100%"
+          height="600"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
 
-  <!-- Imagem Topo -->
-  <div id="imagem1"></div>
-
-  <!-- Portfolio-->
-  <div id="portfolio">
-    <h1>New Fashion Everything Never Enough</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt optio
-      tenetur quisquam ab, reiciendis quo vero repellat eius sed maxime ipsum
-      soluta dolor deserunt non recusandae vitae, voluptatem iste porro? Lorem
-      ipsum dolor sit amet consectetur adipisicing elit. Minima blanditiis alias
-      harum porro recusandae sequi, minus illo expedita quas, magnam fugit,
-      doloremque quibusdam aliquam. Suscipit placeat magni aperiam provident
-      dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-      perspiciatis modi quam obcaecati, aperiam cupiditate nostrum illum
-      reprehenderit distinctio laborum. Architecto vitae numquam optio enim cum
-      voluptatem laborum molestias debitis?
-    </p>
-  </div>
-
-  <!-- Gallery -->
-  <div id="gallery">
-    <img src="imagens/modelo1.jpg" alt="Homem 1" />
-    <h2>Vest Romasa</h2>
-    <p>Strong & charismatic</p>
-    <img src="imagens/modelo2.jpg" alt="Mulher 2" />
-    <h2>Jacket Fima</h2>
-    <p>Stong Sersonality</p>
-    <img src="imagens/modelo3.jpg" alt="Mulher 3" />
-    <h2>Jacket Black Kira</h2>
-    <p>Power Fascinating</p>
-  </div>
-
-  <!-- About -->
-  <div id="about">
-    <h1>Everything Never Enough Just Fashion</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, eos nemo
-      magnam libero officia alias molestiae minus eligendi repudiandae, unde
-      ullam! Modi obcaecati ipsum sunt amet aliquid ipsa assumenda aperiam?Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Earum atque eligendi
-      quisquam necessitatibus accusantium saepe molestias rerum vero praesentium
-      cum neque quod, consequatur animi reiciendis sed in perferendis.
-      Distinctio, laudantium.
-    </p>
-  </div>
-
-  <!-- Contact -->
-  <div id="contact">
-    <h2 class="principal">Call me now for design</h2>
-    <h2 class="secundario">012-1234-4567</h2>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28060.99347780599!2d-52.83442986189413!3d-28.460743229079593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd493c92d28c8f%3A0x6ff21ca741cec0c8!2sN%C3%A3o-Me-Toque%2C%20RS%2C%2099470-000!5e0!3m2!1spt-BR!2sbr!4v1644359101995!5m2!1spt-BR!2sbr"
-      width="100%"
-      height="600"
-      style="border: 0"
-      allowfullscreen=""
-      loading="lazy"
-    ></iframe>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    <p>Copyright © fastfashion.com</p>
-  </footer>
-</body>
+      <!-- Footer -->
+      <footer>
+        <p>Copyright © fastfashion.com</p>
+      </footer>
+    </div>
+  </body>
+</html>
