--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
     <title>Fashion</title>
+    <link rel="shortcut icon" href="imagens/favico.ico" />
   </head>
 
   <link rel="stylesheet" href="style.css" />
