--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Fashion</title>
 
-    <link rel="shortcut icon" href="./imagens/favico.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="Favico/favico.png" type="image/x-icon" />
   </head>
 
   <link rel="stylesheet" href="style.css" />
